--- a/adventure.html
+++ b/adventure.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Adveennntureeee!</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <div id="storybox">
+d
+        </div>
+        <div id="commandinput">
+            <input type="text" name="command">
+        </div>
+    </body>
 </html>
