Added placeholder story text and functionality

--- a/adventure.html
+++ b/adventure.html
@@ -7,10 +7,11 @@
     </head>
     <body>
         <div id="storybox">
-d
         </div>
         <div id="commandinput">
             <input type="text" name="command">
         </div>
+        <script src="js/jquery-2.2.4.js"></script>
+        <script src="js/adventure.js"></script>
     </body>
 </html>
