added feature to p

--- a/backgroundForGame.html
+++ b/backgroundForGame.html
@@ -15,7 +15,7 @@
     <canvas id="canvas1"></canvas>
     <canvas id="canvas2"></canvas>
     <canvas id="canvas3"></canvas>
-    <p class="title">Horror Game Name</p>
+    <p id="title" class="red">Horror Game Name</p>
 </div>
 
 <div id="playContainer">
