--- a/adventure.html
+++ b/adventure.html
@@ -6,12 +6,10 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <div id="storybox">
-        </div>
         <div id="commandinput">
             <input type="text" name="command">
         </div>
         <script src="js/jquery-2.2.4.js"></script>
-        <script src="js/adventure.js"></script>
+        <script src="js/canvas-test2.js"></script>
     </body>
 </html>
