--- a/backgroundForGame.html
+++ b/backgroundForGame.html
@@ -11,6 +11,11 @@
 
 <body>
 
+<audio id="Audio">
+    <source src="audio/Thunder.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+</audio>
+
 <div id="titleContainer" class="thunder">
     <canvas id="canvas1"></canvas>
     <canvas id="canvas2"></canvas>
@@ -25,10 +30,6 @@
 <div id="suggestions">
 
 </div>
-
-
-
-
 <script type="text/javascript" src="jquery2.2.4.js"></script>
 <script type="text/javascript" src="backgroundForGame.js"></script>
 </body>
