finished styling the main page

--- a/backgroundForGame.html
+++ b/backgroundForGame.html
@@ -11,10 +11,6 @@
 
 <body>
 
-<audio id="Audio">
-    <source src="audio/Thunder.mp3" type="audio/mp3">
-    Your browser does not support the audio element.
-</audio>
 
 <div id="titleContainer" class="thunder">
     <canvas id="canvas1"></canvas>
@@ -23,13 +19,8 @@
     <p id="title" class="red">Horror Game Name</p>
 </div>
 
-<div id="playContainer">
-    <div id="playArea"></div>
-</div>
+<a id="start" href="adventure.html"><button class="button" type="button">Start</button></a>
 
-<div id="suggestions">
-
-</div>
 <script type="text/javascript" src="jquery2.2.4.js"></script>
 <script type="text/javascript" src="backgroundForGame.js"></script>
 </body>
