added music to game

--- a/adventure.html
+++ b/adventure.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 
+<audio id="bgSound">
+    <source src="audio/gameMusic.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+</audio>
 
 <div id="commandinput">
     <input type="text" name="command">
