--- a/backgroundForGame.html
+++ b/backgroundForGame.html
@@ -11,6 +11,11 @@
 
 <body>
 
+<audio id="storm">
+    <source src="audio/storm.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+</audio>
+
 <div id="titleContainer" class="thunder">
     <canvas id="canvas1"></canvas>
     <canvas id="canvas2"></canvas>
