--- a/backgroundForGame.html
+++ b/backgroundForGame.html
@@ -20,7 +20,7 @@
     <canvas id="canvas1"></canvas>
     <canvas id="canvas2"></canvas>
     <canvas id="canvas3"></canvas>
-    <p id="title" class="red">Horror Game Name</p>
+    <p id="title" class="red">Haunted House</p>
 </div>
 
 <a id="start" href="adventure.html"><button class="button" type="button">Start</button></a>
